# kopihub_crm

./: .env  .gitignore  README.md  check  kopihub_crm_django_next_architecture.md  pyproject.toml
backend/: .gitignore  README.md  kopihub_crm_django_next_architecture.md  pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py
backend/crm/: admin.py  models.py  serializers.py  services.py  tests.py  throttles.py  urls.py  views.py
backend/crm/migrations/: 0002_seed_program_settings.py  0003_alter_membership_card_number_membershipcard.py  0004_stamp_unique_receipt_number_when_present.py  0005_auditlog.py
backend/users/: admin.py  models.py  permissions.py
backend/users/migrations/: 0001_initial.py  0002_user_role.py
config/: settings.py  urls.py
crm/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
crm/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/cashier/add-stamp/: page.tsx
frontend/app/cashier/members/: page.tsx
frontend/app/cashier/members/[identifier]/: page.tsx
frontend/app/cashier/redeem/: page.tsx
frontend/app/cashier/scan/: page.tsx
frontend/components/: TokenPanel.tsx  Topbar.tsx
frontend/lib/: api.ts
users/: models.py
